--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,7 +2,7 @@ monitor=,preferred,auto,auto
 
 $terminal = gnome-terminal
 $fileManager = nautilus
-# $menu =
+$menu = rofi -show run
 
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
@@ -84,6 +84,7 @@ windowrulev2 = nomaximizerequest, class:.*
 $mainMod = ALT
 
 bind = $mainMod, T, exec, $terminal
+bind = $mainMod, R, exec, $menu
 bind = $mainMod, D, killactive, # D - destroy
 bind = $mainMod, E, exit,
 bind = $mainMod, F, togglefloating, 
