--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,9 +1,5 @@
 monitor=,preferred,auto,auto
 
-$terminal = gnome-terminal
-$fileManager = nautilus
-$menu = yofi
-
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
@@ -75,21 +71,21 @@ misc {
     animate_mouse_windowdragging = true
 }
 
-device:epic-mouse-v1 {
+device {
+    name = epic-mouse-v1
     sensitivity = -0.5
 }
 
-windowrulev2 = nomaximizerequest, class:.*
-
 $mainMod = ALT
 
-bind = $mainMod, T, exec, $terminal
-bind = $mainMod, R, exec, $yofi
-bind = $mainMod, K, killactive,
-bind = $mainMod, E, exit,
-bind = $mainMod, F, togglefloating, 
-bind = $mainMod, P, pseudo, # P - pseudo floating
-bind = $mainMod, S, togglesplit, # S - swap
+bind = $mainMod, T, exec, gnome-terminal
+bind = $mainMod, R, exec, yofi
+bind = $mainMod, B, exec, firefox # B - browser
+bind = $mainMod, K, killactive
+bind = $mainMod, E, exit
+bind = $mainMod, F, togglefloating
+bind = $mainMod, P, pseudo # P - pseudo floating
+bind = $mainMod, S, togglesplit # S - swap
 
 bind = $mainMod, left, movefocus, h
 bind = $mainMod, right, movefocus, l
