yofi proper execution

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -79,7 +79,7 @@ device {
 $mainMod = ALT
 
 bind = $mainMod, T, exec, gnome-terminal
-bind = $mainMod, R, exec, yofi
+bind = $mainMod, R, exec, ~/.cargo/bin/yofi
 bind = $mainMod, B, exec, firefox # B - browser
 bind = $mainMod, K, killactive
 bind = $mainMod, E, exit
