Change: rustfmt style

--- a/rust/rustfmt.toml
+++ b/rust/rustfmt.toml
@@ -3,4 +3,6 @@ combine_control_expr = false
 control_brace_style = "ClosingNextLine"
 format_code_in_doc_comments = true
 imports_layout = "Vertical"
+imports_granularity = "Module"
 tab_spaces = 8
+max_width = 120
